<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/splash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/icon"
                android:contentDescription="@string/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#3B5998"
                android:textSize="28sp"
                android:textStyle="italic"
                android:typeface="serif" />
        </LinearLayout>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/get_started"
            android:textColor="#3B5998"
            android:textSize="17sp" />

        <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />

        
       <ImageButton
            android:id="@+id/images"
            android:layout_width="40pt"
            android:layout_height="40pt"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitXY"
            android:text="@string/bird"
            android:contentDescription="@string/bird" 
            android:src="@drawable/images" />
        
    </LinearLayout>
    

</ScrollView>