<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/twit_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:contentDescription="@string/profilePicture"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/updatedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/post_picture"
            android:layout_width="80pt"
            android:layout_height="80pt"
            android:layout_gravity="left"
            android:contentDescription="@string/post_picture" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/comment_img"
                android:layout_width="15pt"
                android:layout_height="15pt"
                android:contentDescription="@string/retweets"
                android:scaleType="fitStart"
                android:src="@drawable/retweet_icon" />

            <TextView
                android:id="@+id/count_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>